# cafs-backend

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
cafs/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py
core/serializers/: aviso.py  computador.py
core/views/: __init__.py  alocacao.py  aviso.py  projeto.py
